--- a/src/assets/globals.scss
+++ b/src/assets/globals.scss
@@ -10,3 +10,13 @@ $font-color: #fefefe;
     padding: 0;
     box-sizing: border-box;
 }
+
+@mixin btn (){
+    padding: 0.4rem 1rem;
+    border-radius: 3px;
+    font-weight: 600;
+    display: inline-block;
+    cursor: pointer;
+    font-size: 1rem;
+    outline: none;
+}
